--- a/src/index.css
+++ b/src/index.css
@@ -283,33 +283,33 @@
     display: block;
     margin: 15px auto;
     position: relative;
-    background: hsl(var(--primary-foreground));
+    background: hsl(var(--primary));
     box-shadow:
-      -24px 0 hsl(var(--primary-foreground)),
-      24px 0 hsl(var(--primary-foreground));
+      -24px 0 hsl(var(--primary)),
+      24px 0 hsl(var(--primary));
     box-sizing: border-box;
     animation: shadowPulse 2s linear infinite;
   }
 
   @keyframes shadowPulse {
     33% {
-      background: hsl(var(--primary-foreground));
+      background: hsl(var(--primary));
       box-shadow:
         -24px 0 hsl(var(--primary-light)),
-        24px 0 hsl(var(--primary-foreground));
+        24px 0 hsl(var(--primary));
     }
 
     66% {
       background: hsl(var(--primary-light));
       box-shadow:
-        -24px 0 hsl(var(--primary-foreground)),
-        24px 0 hsl(var(--primary-foreground));
+        -24px 0 hsl(var(--primary)),
+        24px 0 hsl(var(--primary));
     }
 
     100% {
-      background: hsl(var(--primary-foreground));
+      background: hsl(var(--primary));
       box-shadow:
-        -24px 0 hsl(var(--primary-foreground)),
+        -24px 0 hsl(var(--primary)),
         24px 0 hsl(var(--primary-light));
     }
   }
